fix: too much actions were displayed on smaller devices

--- a/studio/src/app/popovers/editor/actions/app-more-element-actions/app-more-element-actions.scss
+++ b/studio/src/app/popovers/editor/actions/app-more-element-actions/app-more-element-actions.scss
@@ -1,4 +1,4 @@
-app-more-actions {
+app-more-element-actions {
   a {
     color: inherit;
     cursor: pointer;
